fixed errors, added full Java +20 compatibility, now faster and with timeout